--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
     "react-redux": "^7.1.3",
